// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Button form component should add a new generic object custom button 1`] = `
<div>
  <div
    class="col-md-12 button-form"
  >
    <form>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.button_type"
          >
            Button Type
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.button_type"
              name="options.button_type"
              title=""
            >
              <option
                class="cds--select-option"
                label="Default"
                value="default"
              >
                Default
              </option>
              <option
                class="cds--select-option"
                label="Ansible Playbook"
                value="ansible_playbook"
              >
                Ansible Playbook
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class=""
        id="name-wrapper"
        name="subform-1"
      >
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          >
            <label
              class="cds--label"
              dir="auto"
              for="name"
            >
              <span
                aria-hidden="true"
                class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
              >
                *
              </span>
              Name
            </label>
          </div>
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="name"
                maxlength="50"
                name="name"
                type="text"
                value=""
              />
              
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="cds--form-item cds--checkbox-wrapper"
          >
            <input
              checked=""
              class="cds--checkbox"
              id="display"
              name="options.display"
              type="checkbox"
              value=""
            />
            <label
              class="cds--checkbox-label"
              for="display"
              title=""
            >
              <div
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Display on Button
                
              </div>
            </label>
            <div
              class="cds--checkbox__validation-msg"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="desription"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
            >
              *
            </span>
            Description
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="desription"
              maxlength="255"
              name="description"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <fieldset
        class="cds--fieldset"
      >
        <legend
          class="cds--label"
        >
          Icon
        </legend>
        <div
          class="fonticon-picker"
        >
          <button
            class="icon-button cds--btn cds--btn--tertiary"
            type="button"
          >
            <i
              class="fa-lg ff ff-action"
              id="selected-icon"
            />
            <svg
              aria-hidden="true"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="32"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 22 6 12 7.4 10.6 16 19.2 24.6 10.6 26 12z"
              />
            </svg>
          </button>
        </div>
      </fieldset>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="color-select"
          >
            Icon color
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="color-select"
              name="options.button_color"
              type="color"
              value="#000000"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--list-box__wrapper"
      >
        <label
          class="cds--label"
          dir="auto"
          for="resource_action.dialog_id"
          id="downshift-14-label"
        >
          Dialog
        </label>
        <div
          class="cds--combo-box cds--list-box"
        >
          <div
            class="cds--list-box__field"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="downshift-14-menu"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-14-label"
              autocomplete="off"
              class="cds--text-input cds--text-input--empty"
              id="resource_action.dialog_id"
              name="resource_action.dialog_id"
              placeholder="<Choose>"
              role="combobox"
              tabindex="0"
              title=""
              type="text"
              value=""
            />
            
            <button
              aria-controls="downshift-14-menu"
              aria-expanded="false"
              aria-label="Open"
              class="cds--list-box__menu-icon"
              id="downshift-14-toggle-button"
              tabindex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          
          <ul
            aria-labelledby="downshift-14-label"
            class="cds--list-box__menu"
            id="downshift-14-menu"
            role="listbox"
          />
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.display_for"
          >
            Display for
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.display_for"
              name="options.display_for"
              title="Single Entity"
            >
              <option
                class="cds--select-option"
                label="Single Entity"
                value="single"
              >
                Single Entity
              </option>
              <option
                class="cds--select-option"
                label="List"
                value="list"
              >
                List
              </option>
              <option
                class="cds--select-option"
                label="Single and List"
                value="both"
              >
                Single and List
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.submit_how"
          >
            Submit
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.submit_how"
              name="options.submit_how"
              title="One by one"
            >
              <option
                class="cds--select-option"
                label="Submit all"
                value="all"
              >
                Submit all
              </option>
              <option
                class="cds--select-option"
                label="One by one"
                value="one"
              >
                One by one
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="resource_action.ae_instance"
          >
            System/Process
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="resource_action.ae_instance"
              name="resource_action.ae_instance"
              title="Request"
            >
              <option
                class="cds--select-option"
                label="Automation"
                value="Automation"
              >
                Automation
              </option>
              <option
                class="cds--select-option"
                label="Event"
                value="Event"
              >
                Event
              </option>
              <option
                class="cds--select-option"
                label="GenericObject"
                value="GenericObject"
              >
                GenericObject
              </option>
              <option
                class="cds--select-option"
                label="MiqEvent"
                value="MiqEvent"
              >
                MiqEvent
              </option>
              <option
                class="cds--select-option"
                label="Request"
                value="Request"
              >
                Request
              </option>
              <option
                class="cds--select-option"
                label="parse_automation_request"
                value="parse_automation_request"
              >
                parse_automation_request
              </option>
              <option
                class="cds--select-option"
                label="parse_event_stream"
                value="parse_event_stream"
              >
                parse_event_stream
              </option>
              <option
                class="cds--select-option"
                label="parse_provider_category"
                value="parse_provider_category"
              >
                parse_provider_category
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="ae_message"
          >
            Message
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="ae_message"
              maxlength="255"
              name="resource_action.ae_message"
              type="text"
              value="create"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="request"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
            >
              *
            </span>
            Request
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="request"
              maxlength="255"
              name="uri_attributes.request"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class=""
        id="attribute/value pairs"
        label="Attribute/Value Pairs"
        name="attribute/value pairs"
      >
        <div
          class="cds--form-item"
        >
          <div
            class="cds--select"
          >
            <label
              class="cds--label"
              dir="auto"
              for="visibility.roles"
            >
              Role Access
            </label>
            <div
              class="cds--select-input__wrapper"
            >
              <select
                class="cds--select-input"
                id="visibility.roles"
                name="visibility.roles"
                title="<To All>"
              >
                <option
                  class="cds--select-option"
                  label="<To All>"
                  value="_All_"
                >
                  &lt;To All&gt;
                </option>
                <option
                  class="cds--select-option"
                  label="<By Role>"
                  value="role"
                >
                  &lt;By Role&gt;
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="cds--select__arrow"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
              
            </div>
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
        >
          Add
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Custom Button form component should edit a generic object custom button 1`] = `
<div>
  <div
    class="col-md-12 button-form"
  >
    <form>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.button_type"
          >
            Button Type
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.button_type"
              name="options.button_type"
              title=""
            >
              <option
                class="cds--select-option"
                label="Default"
                value="default"
              >
                Default
              </option>
              <option
                class="cds--select-option"
                label="Ansible Playbook"
                value="ansible_playbook"
              >
                Ansible Playbook
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class=""
        id="playbook-fields"
        name="playbook-fields"
      >
        <div
          class="cds--form-item"
        >
          <div
            class="cds--select"
          >
            <label
              class="cds--label"
              dir="auto"
              for="uri_attributes.service_template_name"
            >
              <span
                aria-hidden="true"
                class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
              >
                *
              </span>
              Playbook Catalog Item
            </label>
            <div
              class="cds--select-input__wrapper"
            >
              <select
                class="cds--select-input"
                id="uri_attributes.service_template_name"
                name="uri_attributes.service_template_name"
                title="CF create user"
              >
                <option
                  class="cds--select-option"
                  label="<Choose>"
                  value=""
                >
                  &lt;Choose&gt;
                </option>
                <option
                  class="cds--select-option"
                  label="Blue Demo Raw"
                  value="Blue Demo Raw"
                >
                  Blue Demo Raw
                </option>
                <option
                  class="cds--select-option"
                  label="CF create user"
                  value="CF create user"
                >
                  CF create user
                </option>
                <option
                  class="cds--select-option"
                  label="Deploy RHEL7 on VMware"
                  value="Deploy RHEL7 on VMware"
                >
                  Deploy RHEL7 on VMware
                </option>
                <option
                  class="cds--select-option"
                  label="Deploy Ticket Monster on AWS"
                  value="Deploy Ticket Monster on AWS"
                >
                  Deploy Ticket Monster on AWS
                </option>
                <option
                  class="cds--select-option"
                  label="LB"
                  value="LB"
                >
                  LB
                </option>
                <option
                  class="cds--select-option"
                  label="MyPBaaS"
                  value="MyPBaaS"
                >
                  MyPBaaS
                </option>
                <option
                  class="cds--select-option"
                  label="OpenStack Application SLA Catalog Item"
                  value="OpenStack Application SLA Catalog Item"
                >
                  OpenStack Application SLA Catalog Item
                </option>
                <option
                  class="cds--select-option"
                  label="SimplePing"
                  value="SimplePing"
                >
                  SimplePing
                </option>
                <option
                  class="cds--select-option"
                  label="demo playbook"
                  value="demo playbook"
                >
                  demo playbook
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="cds--select__arrow"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
              
            </div>
          </div>
        </div>
        <fieldset
          class="cds--fieldset"
        >
          <legend
            class="cds--label"
          >
            Inventory
          </legend>
          <div
            class="cds--form-item"
          >
            <fieldset
              class="cds--radio-button-group cds--radio-button-group--label-right"
              id="inventory_type"
              value="manual"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="radio-button-52"
                  label="Localhost"
                  name="inventory_type"
                  type="radio"
                  value="localhost"
                />
                <label
                  class="cds--radio-button__label"
                  for="radio-button-52"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text"
                    dir="auto"
                  >
                    Localhost
                    
                  </span>
                </label>
              </div>
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="radio-button-53"
                  label="Target Machine"
                  name="inventory_type"
                  type="radio"
                  value="vmdb_object"
                />
                <label
                  class="cds--radio-button__label"
                  for="radio-button-53"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text"
                    dir="auto"
                  >
                    Target Machine
                    
                  </span>
                </label>
              </div>
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  checked=""
                  class="cds--radio-button"
                  id="radio-button-54"
                  label="Specific Hosts"
                  name="inventory_type"
                  type="radio"
                  value="manual"
                />
                <label
                  class="cds--radio-button__label"
                  for="radio-button-54"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text"
                    dir="auto"
                  >
                    Specific Hosts
                    
                  </span>
                </label>
              </div>
            </fieldset>
            <div
              class="cds--radio-button__validation-msg"
            />
          </div>
        </fieldset>
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          >
            <label
              class="cds--label"
              dir="auto"
              for="hosts"
            >
              <span
                aria-hidden="true"
                class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
              >
                *
              </span>
              Enter a comma separated list of IP or DNS names
            </label>
          </div>
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="hosts"
                maxlength="255"
                name="hosts"
                type="text"
                value="192.168.0.1"
              />
              
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class=""
        id="name-wrapper"
        name="subform-1"
      >
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          >
            <label
              class="cds--label"
              dir="auto"
              for="name"
            >
              <span
                aria-hidden="true"
                class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
              >
                *
              </span>
              Name
            </label>
          </div>
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="name"
                maxlength="50"
                name="name"
                type="text"
                value=""
              />
              
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="cds--form-item cds--checkbox-wrapper"
          >
            <input
              checked=""
              class="cds--checkbox"
              id="display"
              name="options.display"
              type="checkbox"
              value=""
            />
            <label
              class="cds--checkbox-label"
              for="display"
              title=""
            >
              <div
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Display on Button
                
              </div>
            </label>
            <div
              class="cds--checkbox__validation-msg"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="desription"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
            >
              *
            </span>
            Description
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="desription"
              maxlength="255"
              name="description"
              type="text"
              value="This is a solo button."
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <fieldset
        class="cds--fieldset"
      >
        <legend
          class="cds--label"
        >
          Icon
        </legend>
        <div
          class="fonticon-picker"
        >
          <button
            class="icon-button cds--btn cds--btn--tertiary"
            type="button"
          >
            <i
              class="fa-lg ff ff-cloud-network"
              id="selected-icon"
            />
            <svg
              aria-hidden="true"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="32"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 22 6 12 7.4 10.6 16 19.2 24.6 10.6 26 12z"
              />
            </svg>
          </button>
        </div>
      </fieldset>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="color-select"
          >
            Icon color
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="color-select"
              name="options.button_color"
              type="color"
              value="#1bc918"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--list-box__wrapper"
      >
        <label
          class="cds--label"
          dir="auto"
          for="resource_action.dialog_id"
          id="downshift-16-label"
        >
          Dialog
        </label>
        <div
          class="cds--combo-box cds--list-box"
        >
          <div
            class="cds--list-box__field"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="downshift-16-menu"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-16-label"
              autocomplete="off"
              class="cds--text-input"
              id="resource_action.dialog_id"
              name="resource_action.dialog_id"
              placeholder="<Choose>"
              role="combobox"
              tabindex="0"
              title="amq-demo"
              type="text"
              value="amq-demo"
            />
            <button
              aria-label="Clear selected item"
              class="cds--list-box__selection"
              tabindex="-1"
              title="Clear selected item"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
            <button
              aria-controls="downshift-16-menu"
              aria-expanded="false"
              aria-label="Open"
              class="cds--list-box__menu-icon"
              id="downshift-16-toggle-button"
              tabindex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          
          <ul
            aria-labelledby="downshift-16-label"
            class="cds--list-box__menu"
            id="downshift-16-menu"
            role="listbox"
          />
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.display_for"
          >
            Display for
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.display_for"
              name="options.display_for"
              title="List"
            >
              <option
                class="cds--select-option"
                label="Single Entity"
                value="single"
              >
                Single Entity
              </option>
              <option
                class="cds--select-option"
                label="List"
                value="list"
              >
                List
              </option>
              <option
                class="cds--select-option"
                label="Single and List"
                value="both"
              >
                Single and List
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.submit_how"
          >
            Submit
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.submit_how"
              name="options.submit_how"
              title="Submit all"
            >
              <option
                class="cds--select-option"
                label="Submit all"
                value="all"
              >
                Submit all
              </option>
              <option
                class="cds--select-option"
                label="One by one"
                value="one"
              >
                One by one
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class=""
        id="attribute/value pairs"
        label="Attribute/Value Pairs"
        name="attribute/value pairs"
      >
        <div
          class="cds--form-item"
        >
          <div
            class="cds--select"
          >
            <label
              class="cds--label"
              dir="auto"
              for="visibility.roles"
            >
              Role Access
            </label>
            <div
              class="cds--select-input__wrapper"
            >
              <select
                class="cds--select-input"
                id="visibility.roles"
                name="visibility.roles"
                title="<To All>"
              >
                <option
                  class="cds--select-option"
                  label="<To All>"
                  value="_All_"
                >
                  &lt;To All&gt;
                </option>
                <option
                  class="cds--select-option"
                  label="<By Role>"
                  value="role"
                >
                  &lt;By Role&gt;
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="cds--select__arrow"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
              
            </div>
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
        >
          Save
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary cds--btn--disabled"
          disabled=""
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Custom Button form component should render the adding form for generic obj buttons 1`] = `
<div>
  <div
    class="col-md-12 button-form"
  >
    <form>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.button_type"
          >
            Button Type
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.button_type"
              name="options.button_type"
              title=""
            >
              <option
                class="cds--select-option"
                label="Default"
                value="default"
              >
                Default
              </option>
              <option
                class="cds--select-option"
                label="Ansible Playbook"
                value="ansible_playbook"
              >
                Ansible Playbook
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class=""
        id="name-wrapper"
        name="subform-1"
      >
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          >
            <label
              class="cds--label"
              dir="auto"
              for="name"
            >
              <span
                aria-hidden="true"
                class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
              >
                *
              </span>
              Name
            </label>
          </div>
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="name"
                maxlength="50"
                name="name"
                type="text"
                value=""
              />
              
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="cds--form-item cds--checkbox-wrapper"
          >
            <input
              checked=""
              class="cds--checkbox"
              id="display"
              name="options.display"
              type="checkbox"
              value=""
            />
            <label
              class="cds--checkbox-label"
              for="display"
              title=""
            >
              <div
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Display on Button
                
              </div>
            </label>
            <div
              class="cds--checkbox__validation-msg"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="desription"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
            >
              *
            </span>
            Description
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="desription"
              maxlength="255"
              name="description"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <fieldset
        class="cds--fieldset"
      >
        <legend
          class="cds--label"
        >
          Icon
        </legend>
        <div
          class="fonticon-picker"
        >
          <button
            class="icon-button cds--btn cds--btn--tertiary"
            type="button"
          >
            <i
              class="fa-lg ff ff-action"
              id="selected-icon"
            />
            <svg
              aria-hidden="true"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="32"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 22 6 12 7.4 10.6 16 19.2 24.6 10.6 26 12z"
              />
            </svg>
          </button>
        </div>
      </fieldset>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="color-select"
          >
            Icon color
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="color-select"
              name="options.button_color"
              type="color"
              value="#000000"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--list-box__wrapper"
      >
        <label
          class="cds--label"
          dir="auto"
          for="resource_action.dialog_id"
          id="downshift-5-label"
        >
          Dialog
        </label>
        <div
          class="cds--combo-box cds--list-box"
        >
          <div
            class="cds--list-box__field"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="downshift-5-menu"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-5-label"
              autocomplete="off"
              class="cds--text-input cds--text-input--empty"
              id="resource_action.dialog_id"
              name="resource_action.dialog_id"
              placeholder="<Choose>"
              role="combobox"
              tabindex="0"
              title=""
              type="text"
              value=""
            />
            
            <button
              aria-controls="downshift-5-menu"
              aria-expanded="false"
              aria-label="Open"
              class="cds--list-box__menu-icon"
              id="downshift-5-toggle-button"
              tabindex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          
          <ul
            aria-labelledby="downshift-5-label"
            class="cds--list-box__menu"
            id="downshift-5-menu"
            role="listbox"
          />
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.display_for"
          >
            Display for
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.display_for"
              name="options.display_for"
              title="Single Entity"
            >
              <option
                class="cds--select-option"
                label="Single Entity"
                value="single"
              >
                Single Entity
              </option>
              <option
                class="cds--select-option"
                label="List"
                value="list"
              >
                List
              </option>
              <option
                class="cds--select-option"
                label="Single and List"
                value="both"
              >
                Single and List
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.submit_how"
          >
            Submit
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.submit_how"
              name="options.submit_how"
              title="One by one"
            >
              <option
                class="cds--select-option"
                label="Submit all"
                value="all"
              >
                Submit all
              </option>
              <option
                class="cds--select-option"
                label="One by one"
                value="one"
              >
                One by one
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="resource_action.ae_instance"
          >
            System/Process
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="resource_action.ae_instance"
              name="resource_action.ae_instance"
              title="Request"
            >
              <option
                class="cds--select-option"
                label="Automation"
                value="Automation"
              >
                Automation
              </option>
              <option
                class="cds--select-option"
                label="Event"
                value="Event"
              >
                Event
              </option>
              <option
                class="cds--select-option"
                label="GenericObject"
                value="GenericObject"
              >
                GenericObject
              </option>
              <option
                class="cds--select-option"
                label="MiqEvent"
                value="MiqEvent"
              >
                MiqEvent
              </option>
              <option
                class="cds--select-option"
                label="Request"
                value="Request"
              >
                Request
              </option>
              <option
                class="cds--select-option"
                label="parse_automation_request"
                value="parse_automation_request"
              >
                parse_automation_request
              </option>
              <option
                class="cds--select-option"
                label="parse_event_stream"
                value="parse_event_stream"
              >
                parse_event_stream
              </option>
              <option
                class="cds--select-option"
                label="parse_provider_category"
                value="parse_provider_category"
              >
                parse_provider_category
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="ae_message"
          >
            Message
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="ae_message"
              maxlength="255"
              name="resource_action.ae_message"
              type="text"
              value="create"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="request"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
            >
              *
            </span>
            Request
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="request"
              maxlength="255"
              name="uri_attributes.request"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class=""
        id="attribute/value pairs"
        label="Attribute/Value Pairs"
        name="attribute/value pairs"
      >
        <div
          class="cds--form-item"
        >
          <div
            class="cds--select"
          >
            <label
              class="cds--label"
              dir="auto"
              for="visibility.roles"
            >
              Role Access
            </label>
            <div
              class="cds--select-input__wrapper"
            >
              <select
                class="cds--select-input"
                id="visibility.roles"
                name="visibility.roles"
                title="<To All>"
              >
                <option
                  class="cds--select-option"
                  label="<To All>"
                  value="_All_"
                >
                  &lt;To All&gt;
                </option>
                <option
                  class="cds--select-option"
                  label="<By Role>"
                  value="role"
                >
                  &lt;By Role&gt;
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="cds--select__arrow"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
              
            </div>
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
        >
          Add
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Custom Button form component should render the editing form for generic object custom buttons 1`] = `
<div>
  <div
    class="col-md-12 button-form"
  >
    <form>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.button_type"
          >
            Button Type
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.button_type"
              name="options.button_type"
              title=""
            >
              <option
                class="cds--select-option"
                label="Default"
                value="default"
              >
                Default
              </option>
              <option
                class="cds--select-option"
                label="Ansible Playbook"
                value="ansible_playbook"
              >
                Ansible Playbook
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class=""
        id="playbook-fields"
        name="playbook-fields"
      >
        <div
          class="cds--form-item"
        >
          <div
            class="cds--select"
          >
            <label
              class="cds--label"
              dir="auto"
              for="uri_attributes.service_template_name"
            >
              <span
                aria-hidden="true"
                class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
              >
                *
              </span>
              Playbook Catalog Item
            </label>
            <div
              class="cds--select-input__wrapper"
            >
              <select
                class="cds--select-input"
                id="uri_attributes.service_template_name"
                name="uri_attributes.service_template_name"
                title="CF create user"
              >
                <option
                  class="cds--select-option"
                  label="<Choose>"
                  value=""
                >
                  &lt;Choose&gt;
                </option>
                <option
                  class="cds--select-option"
                  label="Blue Demo Raw"
                  value="Blue Demo Raw"
                >
                  Blue Demo Raw
                </option>
                <option
                  class="cds--select-option"
                  label="CF create user"
                  value="CF create user"
                >
                  CF create user
                </option>
                <option
                  class="cds--select-option"
                  label="Deploy RHEL7 on VMware"
                  value="Deploy RHEL7 on VMware"
                >
                  Deploy RHEL7 on VMware
                </option>
                <option
                  class="cds--select-option"
                  label="Deploy Ticket Monster on AWS"
                  value="Deploy Ticket Monster on AWS"
                >
                  Deploy Ticket Monster on AWS
                </option>
                <option
                  class="cds--select-option"
                  label="LB"
                  value="LB"
                >
                  LB
                </option>
                <option
                  class="cds--select-option"
                  label="MyPBaaS"
                  value="MyPBaaS"
                >
                  MyPBaaS
                </option>
                <option
                  class="cds--select-option"
                  label="OpenStack Application SLA Catalog Item"
                  value="OpenStack Application SLA Catalog Item"
                >
                  OpenStack Application SLA Catalog Item
                </option>
                <option
                  class="cds--select-option"
                  label="SimplePing"
                  value="SimplePing"
                >
                  SimplePing
                </option>
                <option
                  class="cds--select-option"
                  label="demo playbook"
                  value="demo playbook"
                >
                  demo playbook
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="cds--select__arrow"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
              
            </div>
          </div>
        </div>
        <fieldset
          class="cds--fieldset"
        >
          <legend
            class="cds--label"
          >
            Inventory
          </legend>
          <div
            class="cds--form-item"
          >
            <fieldset
              class="cds--radio-button-group cds--radio-button-group--label-right"
              id="inventory_type"
              value="manual"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="radio-button-22"
                  label="Localhost"
                  name="inventory_type"
                  type="radio"
                  value="localhost"
                />
                <label
                  class="cds--radio-button__label"
                  for="radio-button-22"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text"
                    dir="auto"
                  >
                    Localhost
                    
                  </span>
                </label>
              </div>
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="radio-button-23"
                  label="Target Machine"
                  name="inventory_type"
                  type="radio"
                  value="vmdb_object"
                />
                <label
                  class="cds--radio-button__label"
                  for="radio-button-23"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text"
                    dir="auto"
                  >
                    Target Machine
                    
                  </span>
                </label>
              </div>
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  checked=""
                  class="cds--radio-button"
                  id="radio-button-24"
                  label="Specific Hosts"
                  name="inventory_type"
                  type="radio"
                  value="manual"
                />
                <label
                  class="cds--radio-button__label"
                  for="radio-button-24"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text"
                    dir="auto"
                  >
                    Specific Hosts
                    
                  </span>
                </label>
              </div>
            </fieldset>
            <div
              class="cds--radio-button__validation-msg"
            />
          </div>
        </fieldset>
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          >
            <label
              class="cds--label"
              dir="auto"
              for="hosts"
            >
              <span
                aria-hidden="true"
                class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
              >
                *
              </span>
              Enter a comma separated list of IP or DNS names
            </label>
          </div>
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="hosts"
                maxlength="255"
                name="hosts"
                type="text"
                value="192.168.0.1"
              />
              
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class=""
        id="name-wrapper"
        name="subform-1"
      >
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          >
            <label
              class="cds--label"
              dir="auto"
              for="name"
            >
              <span
                aria-hidden="true"
                class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
              >
                *
              </span>
              Name
            </label>
          </div>
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="name"
                maxlength="50"
                name="name"
                type="text"
                value=""
              />
              
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="cds--form-item cds--checkbox-wrapper"
          >
            <input
              checked=""
              class="cds--checkbox"
              id="display"
              name="options.display"
              type="checkbox"
              value=""
            />
            <label
              class="cds--checkbox-label"
              for="display"
              title=""
            >
              <div
                class="cds--checkbox-label-text"
                dir="auto"
              >
                Display on Button
                
              </div>
            </label>
            <div
              class="cds--checkbox__validation-msg"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="desription"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-2"
            >
              *
            </span>
            Description
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="desription"
              maxlength="255"
              name="description"
              type="text"
              value="This is a solo button."
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <fieldset
        class="cds--fieldset"
      >
        <legend
          class="cds--label"
        >
          Icon
        </legend>
        <div
          class="fonticon-picker"
        >
          <button
            class="icon-button cds--btn cds--btn--tertiary"
            type="button"
          >
            <i
              class="fa-lg ff ff-cloud-network"
              id="selected-icon"
            />
            <svg
              aria-hidden="true"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="32"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 22 6 12 7.4 10.6 16 19.2 24.6 10.6 26 12z"
              />
            </svg>
          </button>
        </div>
      </fieldset>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="color-select"
          >
            Icon color
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="color-select"
              name="options.button_color"
              type="color"
              value="#1bc918"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--list-box__wrapper"
      >
        <label
          class="cds--label"
          dir="auto"
          for="resource_action.dialog_id"
          id="downshift-7-label"
        >
          Dialog
        </label>
        <div
          class="cds--combo-box cds--list-box"
        >
          <div
            class="cds--list-box__field"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="downshift-7-menu"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-7-label"
              autocomplete="off"
              class="cds--text-input"
              id="resource_action.dialog_id"
              name="resource_action.dialog_id"
              placeholder="<Choose>"
              role="combobox"
              tabindex="0"
              title="amq-demo"
              type="text"
              value="amq-demo"
            />
            <button
              aria-label="Clear selected item"
              class="cds--list-box__selection"
              tabindex="-1"
              title="Clear selected item"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
            <button
              aria-controls="downshift-7-menu"
              aria-expanded="false"
              aria-label="Open"
              class="cds--list-box__menu-icon"
              id="downshift-7-toggle-button"
              tabindex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          
          <ul
            aria-labelledby="downshift-7-label"
            class="cds--list-box__menu"
            id="downshift-7-menu"
            role="listbox"
          />
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.display_for"
          >
            Display for
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.display_for"
              name="options.display_for"
              title="List"
            >
              <option
                class="cds--select-option"
                label="Single Entity"
                value="single"
              >
                Single Entity
              </option>
              <option
                class="cds--select-option"
                label="List"
                value="list"
              >
                List
              </option>
              <option
                class="cds--select-option"
                label="Single and List"
                value="both"
              >
                Single and List
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="options.submit_how"
          >
            Submit
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="options.submit_how"
              name="options.submit_how"
              title="Submit all"
            >
              <option
                class="cds--select-option"
                label="Submit all"
                value="all"
              >
                Submit all
              </option>
              <option
                class="cds--select-option"
                label="One by one"
                value="one"
              >
                One by one
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class=""
        id="attribute/value pairs"
        label="Attribute/Value Pairs"
        name="attribute/value pairs"
      >
        <div
          class="cds--form-item"
        >
          <div
            class="cds--select"
          >
            <label
              class="cds--label"
              dir="auto"
              for="visibility.roles"
            >
              Role Access
            </label>
            <div
              class="cds--select-input__wrapper"
            >
              <select
                class="cds--select-input"
                id="visibility.roles"
                name="visibility.roles"
                title="<To All>"
              >
                <option
                  class="cds--select-option"
                  label="<To All>"
                  value="_All_"
                >
                  &lt;To All&gt;
                </option>
                <option
                  class="cds--select-option"
                  label="<By Role>"
                  value="role"
                >
                  &lt;By Role&gt;
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="cds--select__arrow"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
              
            </div>
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
        >
          Save
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary cds--btn--disabled"
          disabled=""
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
